# angular-kythe-ui

./: .gitignore  .prettierrc  3rdpartylicenses.txt  4.07fe489863a6861f4f20.js  4.64221f2301fa3eb73a1c.js  4.82ac80fdddf9430ee895.js  4.aee813be359a29d2a3cb.js  4.aff9ea7e87120c462d7c.js  4.f7534495959e6373aacb.js  404.html  5.20a4a18baa16aa6d53af.js  5.28453aa438848818bb12.js  5.2e8d49334d7a3dbc474f.js  5.50cd8b4450a5b969060b.js  5.750e12de47bfbc314466.js  5.b8bd489593b5f4274879.js  5.ba2b4b4dfe3ac9ad82c9.js  5.bc687105291ce1ca5f2f.js  5.d57462d32a5b644a0382.js  5.da4745b6021030e3ea6c.js  BUILD  CNAME  README.md  WORKSPACE  angular.json  go.mod  go.sum  index.html  main.05f39b3fd7006d149c25.js  main.0c63d44d4976eca66b79.js  main.146f15d70856a448aa57.js  main.1da2718c266465078ee6.js  main.491fc4a714509a3719e9.js  main.4d1342f3134ebca7d98c.js  main.57581bb567c681b67a0b.js  main.58280ac1525a6a0defad.js  main.671079e7aa30885a13d5.js  main.765fa665e11a9ff41477.js  main.7b83a406cbda885c1d32.js  main.9b7ad1801bcaa0d0bacf.js  (+42 more)
.circleci/: config.yml
apps/demo/: tsconfig.app.json
apps/demo/src/: app.module.ts  index.html  styles.scss
apps/demo/src/app/: app.component.html  app.component.ts  app.module.ts
apps/kythe-ui/: jest.config.js  tsconfig.app.json  tsconfig.spec.json  tslint.json
apps/kythe-ui-e2e/: cypress.json  tsconfig.e2e.json
apps/kythe-ui-e2e/src/integration/: app.spec.ts
apps/kythe-ui/src/: app.module.ts  index.html  main.ts  styles.scss
apps/kythe-ui/src/app/: app.component.html  app.component.ts  app.module.ts
apps/offline-ui-testing/: tsconfig.app.json
apps/offline-ui-testing/src/: app.module.ts  index.html  mock-kythe-service.ts  styles.scss
e2e/src/: app.e2e-spec.ts
libs/code-mirror/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/code-mirror/src/: index.ts
libs/code-mirror/src/lib/: code-mirror.component.html  code-mirror.component.scss  code-mirror.component.spec.ts  code-mirror.component.ts  code-mirror.module.spec.ts  code-mirror.module.ts
libs/file-tree/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/file-tree/src/: index.ts
libs/file-tree/src/lib/: dynamic-flat-node.ts  file-tree.component.html  file-tree.component.scss  file-tree.component.spec.ts  file-tree.component.ts  file-tree.data-source.ts  file-tree.module.spec.ts  file-tree.module.ts
libs/kythe/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/kythe/src/: index.ts
libs/kythe/src/lib/: codemirror.ts  get-decorations-request.ts  kythe.declarations.ts  kythe.module.ts  kythe.service.spec.ts  kythe.service.ts  kythe.target.ts
libs/kythe/src/testing/: response_large.ts  response_small.ts
libs/shell/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/shell/src/lib/: _shell.scss  shell.module.ts  (+4 more)
libs/source-viewer/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/source-viewer/src/: index.ts
libs/zoekt/: jest.config.js  tsconfig.lib.json  tsconfig.spec.json
libs/zoekt/src/: index.ts
projects/kythe/: ng-package.json  package.json
projects/kythe/src/: public_api.ts  testing_api.ts
projects/shell/: ng-package.json  package.json
projects/shell/src/: public_api.ts  test.ts
src/: index.html  main.ts  response2.ts  test.ts  tsconfig.app.json
src/app/: app.component.spec.ts  app.component.ts  app.module.ts
zoekt/cmd/: BUILD.bazel  main.go  run.sh
zoekt/rest/: BUILD.bazel  serve.go
zoekt/web/: BUILD.bazel  e2e_test.go  server.go
(+24 files in other folders)
