load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mrmeku/angular-kythe-ui/zoekt/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//zoekt/web:go_default_library",
        "@com_github_google_zoekt//:go_default_library",
        "@com_github_google_zoekt//build:go_default_library",
        "@com_github_google_zoekt//shards:go_default_library",
        "@org_golang_x_net//trace:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
