load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "server.go",
        "snippets.go",
        "templates.go",
    ],
    importpath = "github.com/mrmeku/angular-kythe-ui/zoekt/web",
    visibility = ["//visibility:public"],
    deps = [
        "//zoekt/rest:go_default_library",
        "@com_github_google_zoekt//:go_default_library",
        "@com_github_google_zoekt//query:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["e2e_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_zoekt//:go_default_library",
        "@com_github_google_zoekt//query:go_default_library",
    ],
)
